--- a/基础.md
+++ b/基础.md
@@ -4,53 +4,152 @@
 
 2.  %
 
-3. **几（几次方）
+3. ```python
+   pow(base,exp,mod) base为底的exp次幂，如果mod给出，取余
+   ```
 
-4. 变量赋值不改变 原本左边指向的右边 的值，而是将左边指向新的内存对象。
+4. ```python
+   int('12',8)# 转为整型，第一参数为如果不是整数，第二个参数则指定进制，如此为8进制
+   ```
 
-5. 三引号字符串 支持跨行
+5. `round(10.0222222, 3)` 第二个参数为小数点后保留几位
 
-6. 字符串里有引号：用三引号
+6. 链式比较：
 
-7. 字符串元素的索引从0开始，负数反过来表示索引
+   `i = 3` 
 
-8. 字符串 切片的位置！（从左向右，从**0**开始。从右向左，最右**-1**。以左方为索引位置）左闭右开
+   `print(1 < i < 3)  *# False*`
 
-9. py的函数定义， 注意缩进。
+   `print(1 < i <= 3)  *# True*`
 
-10. 函数必须先定义，再调用，上下关系。
+7. **几（几次方）
 
-11. 函数的返回，`return ‘’`。引号里代表这个函数的返回，获取后输出。
+8. 字符串转字节：
 
-12. 在定义函数时，赋缺省值，即default
+   ```python
+   s = "apple"
+   bytes(s,encoding='utf-8')
+   	#b'apple'
+   ```
 
-13. 列表里边可存函数，可存列表 `nameList = [1,2,3，['hello'], [7,8,9] ]`
+9.  执行字符串表示的代码:
 
-14. 列表的sequence操作，即索引切片
+    ```python
+    In [1]: s  = "print('helloworld')"
+    
+    In [2]: r = compile(s,"<string>", "exec")
+    
+    In [3]: r
+    Out[3]: <code object <module> at 0x0000000005DE75D0, file "<string>", line 1>
+    
+    In [4]: exec(r)
+    helloworld
+    ```
 
-15. 列表特性-存储内容的改变。直接`a[i]=xxx,a[i][j]=xxx`
+10. 字符串格式化
 
-16. 元组（Tuple）：和列表不同的是，它的内容是无法改变的。`nameList=（）`，圆括号用来表示一个元组。`a = （1,2,3.14，‘hello’，[7,8,9]）`如果元组中只有一个元素，也要加逗号，即`a = (1,)`,否则对于`a = （1）`会被视为是数字1.
+    `print("i am {0},age{1}".format("tom",18))`
 
-17. (**sequence** 下)判断 元素 是否存在于列表或元组里 用 `in`，返回`false`或`true`
+    `print("{:.2f}".format(3.1112))`
 
-18. 多个变量同时赋值：`x,y = (1,2)`  ,x 的值为1，y 的值为2
+    | 3.1415926  | {:.2f}  | 3.14      | 保留小数点后两位             |
+    | ---------- | ------- | --------- | ---------------------------- |
+    | 3.1415926  | {:+.2f} | +3.14     | 带符号保留小数点后两位       |
+    | -1         | {:+.2f} | -1.00     | 带符号保留小数点后两位       |
+    | 2.71828    | {:.0f}  | 3         | 不带小数                     |
+    | 5          | {:0>2d} | 05        | 数字补零 (填充左边, 宽度为2) |
+    | 5          | {:x<4d} | 5xxx      | 数字补x (填充右边, 宽度为4)  |
+    | 10         | {:x<4d} | 10xx      | 数字补x (填充右边, 宽度为4)  |
+    | 1000000    | {:,}    | 1,000,000 | 以逗号分隔的数字格式         |
+    | 0.25       | {:.2%}  | 25.00%    | 百分比格式                   |
+    | 1000000000 | {:.2e}  | 1.00e+09  | 指数记法                     |
+    | 18         | {:>10d} | ' 18'     | 右对齐 (默认, 宽度为10)      |
+    | 18         | {:<10d} | '18 '     | 左对齐 (宽度为10)            |
+    | 18         | {:^10d} | ' 18 '    | 中间对齐 (宽度为10)          |
+    '{:b}'.format(11)  #1011 二进制
 
-19. 列表同时赋值：`name,age = ['李逵',33]` ,name 的值为 '李逵'，age的值为 33
+    '{:d}'.format(11)  #11 十进制
 
-20. 不对的例子：`x,y = (1,2,3)    a,b = [1]`
+    '{:o}'.format(11)  #13 八进制
 
-21. 且 的条件组合：**and**
+    '{:x}'.format(11)  #b 十六进制
 
-22. 或 的条件组合：**or**
+    '{:#x}'.format(11)  #0xb
 
-23. 如果 and  和 or  一起使用，则**先计算 and**，其结果在和 or 一起计算。
+    '{:#X}'.format(11)  #0XB
 
-24. **not**  翻转表达式。
+    
 
-25. 如果 and  or not 一起计算，则 先计算 **not**，再计算 **and**，最后是 **or**。比如：`not 4 > 6 or 'sk' == 'ok' and 4 > 3`.则先计算 **not 4 > 6** ，得到 **true**，再计算 **'sk' == 'ok' and 4 > 3**，得到 **false**。最后计算 **or**， 就是 **true or false** 。最后结果是 **true**。
+11.  操作对象函数
 
-26. ```python
+     ```python
+     In [31]: def f():
+         ...:     print('i\'m f')
+         ...:
+     
+     In [32]: def g():
+         ...:     print('i\'m g')
+         ...:
+     
+     In [33]: [f,g][1]()
+     i'm g
+     # 创建函数对象的list，根据想要调用的index，方便统一调用。
+     ```
+
+12.  逆序序列
+
+     ```python
+     list(range(10,-1,-1)) # [10, 9, 8, 7, 6, 5, 4, 3, 2, 1, 0]
+     # 第三个参数为负时，表示从第一个参数开始递减，终止到第二个参数(不包括此边界)
+     ```
+
+13.  
+
+14. 变量赋值不改变 原本左边指向的右边 的值，而是将左边指向新的内存对象。
+
+15. 三引号字符串 支持跨行
+
+16. 字符串里有引号：用三引号
+
+17. 字符串元素的索引从0开始，负数反过来表示索引
+
+18. 字符串 切片的位置！（从左向右，从**0**开始。从右向左，最右**-1**。以左方为索引位置）左闭右开
+
+19. py的函数定义， 注意缩进。
+
+20. 函数必须先定义，再调用，上下关系。
+
+21. 函数的返回，`return ‘’`。引号里代表这个函数的返回，获取后输出。
+
+22. 在定义函数时，赋缺省值，即default
+
+23. 列表里边可存函数，可存列表 `nameList = [1,2,3，['hello'], [7,8,9] ]`
+
+24. 列表的sequence操作，即索引切片
+
+25. 列表特性-存储内容的改变。直接`a[i]=xxx,a[i][j]=xxx`
+
+26. 元组（Tuple）：和列表不同的是，它的内容是无法改变的。`nameList=（）`，圆括号用来表示一个元组。`a = （1,2,3.14，‘hello’，[7,8,9]）`如果元组中只有一个元素，也要加逗号，即`a = (1,)`,否则对于`a = （1）`会被视为是数字1.
+
+27. (**sequence** 下)判断 元素 是否存在于列表或元组里 用 `in`，返回`false`或`true`
+
+28. 多个变量同时赋值：`x,y = (1,2)`  ,x 的值为1，y 的值为2
+
+29. 列表同时赋值：`name,age = ['李逵',33]` ,name 的值为 '李逵'，age的值为 33
+
+30. 不对的例子：`x,y = (1,2,3)    a,b = [1]`
+
+31. 且 的条件组合：**and**
+
+32. 或 的条件组合：**or**
+
+33. 如果 and  和 or  一起使用，则**先计算 and**，其结果在和 or 一起计算。
+
+34. **not**  翻转表达式。
+
+35. 如果 and  or not 一起计算，则 先计算 **not**，再计算 **and**，最后是 **or**。比如：`not 4 > 6 or 'sk' == 'ok' and 4 > 3`.则先计算 **not 4 > 6** ，得到 **true**，再计算 **'sk' == 'ok' and 4 > 3**，得到 **false**。最后计算 **or**， 就是 **true or false** 。最后结果是 **true**。
+
+36. ```python
     def regis(): # 注意定义函数后的 冒号
         phont = input('请输入手机号（不超过11位）：')
         if len(phone) > 11: # 注意if语句后的 冒号
@@ -64,67 +163,67 @@
         print('函数结束') # 注意缩进
     regis()
     ```
-    
-27.  字面量（直接写出来的） 和 变量
 
-28.  字符串
+37. 字面量（直接写出来的） 和 变量
 
-     1.  字符串.count('xx')
+38. 字符串
 
-     2.  字符串.find('xx') **第一个** 出现的位置索引
+    1.  字符串.count('xx')
 
-     3.  split 截取：将字符串转为列表
+    2.  字符串.find('xx') **第一个** 出现的位置索引
 
-     4.  join 连接："|".join(pos1),以 | 为界，将 列表 转为 字符串。
+    3.  split 截取：将字符串转为列表
 
-     5.  strip 剥离：把字符串前面和后面的空格删除。中间的空格不动。
+    4.  join 连接："|".join(pos1),以 | 为界，将 列表 转为 字符串。
 
-     6.  lstrip 左剥离：
+    5.  strip 剥离：把字符串前面和后面的空格删除。中间的空格不动。
 
-     7.  rstrip 右剥离：
+    6.  lstrip 左剥离：
 
-     8.  replace 替换：str.replace(' ','')  ## 将空格字符串替换为 空字符
+    7.  rstrip 右剥离：
 
-     9.  **以上方法不会改变字符串自身，原字符串是不变的，只是产生了一个新的字符串并返回。即不对原字符串进行重新赋值，原字符串是不变的。**
+    8.  replace 替换：str.replace(' ','')  ## 将空格字符串替换为 空字符
 
-         ```python
-         ##
-         str1 = '我们不上课'
-         str2 = str1.replace('我们','他们')
-         
-         ##
-         str1 = '我们上课'
-         str1 = str1.replace('我们','他们')
-         ```
+    9.  **以上方法不会改变字符串自身，原字符串是不变的，只是产生了一个新的字符串并返回。即不对原字符串进行重新赋值，原字符串是不变的。**
 
-         
+        ```python
+        ##
+        str1 = '我们不上课'
+        str2 = str1.replace('我们','他们')
+        
+        ##
+        str1 = '我们上课'
+        str1 = str1.replace('我们','他们')
+        ```
 
-     10.  startswith和endswith：检查开头或结尾是否包含某字符串并返回true或false。
+        
 
-29.  列表对象
+    10.  startswith和endswith：检查开头或结尾是否包含某字符串并返回true或false。
 
-     1.  append：改变列表内容，在**后面**加一个元素
-     2.  insert:在指定位置（索引）处添加。
-     3.  pop：取出元素（删除）a.pop(3)，取出也可以赋给另一个变量
-     4.  remove：删除。pop是删除元素的**索引**，remove是删除元素的**值**。remove从第一个元素开始，寻找 和参数对象 相同的元素，如果找到了就删除。找到后，不会继续往后找其他相等的元素。也就是说remove最多只会删除一个元素。
-     5.  reverse：倒置，将列表中元素倒过来。
+39. 列表对象
 
-30.  格式化字符串：把一串 字符串模板 的 变量值 传进去
+    1.  append：改变列表内容，在**后面**加一个元素
+    2.  insert:在指定位置（索引）处添加。
+    3.  pop：取出元素（删除）a.pop(3)，取出也可以赋给另一个变量
+    4.  remove：删除。pop是删除元素的**索引**，remove是删除元素的**值**。remove从第一个元素开始，寻找 和参数对象 相同的元素，如果找到了就删除。找到后，不会继续往后找其他相等的元素。也就是说remove最多只会删除一个元素。
+    5.  reverse：倒置，将列表中元素倒过来。
 
-     1.  printf格式化字符串：%s，这种占位符方式。`printf('%s,%s,%s' %(x,y,z))`
-         1.  如果占位符是1个，后面的元组里边一定别忘了**加逗号**.`printf('%s' %(x,))`.。因为%()是一个元组。
-         2.  %d：格式化整数，打印数字，指定宽度，不足宽度补0，而不是补空格，则 `%010d`,从左开始，第一个0代表补0，10表示指定的宽度。
-         3.  %f：格式化小数，%010f，表示整数小数部分宽度为10，若不足，则后补0.
-             1.  如果想保留小数点后面2位数字，可以加上 **.2** 这样：%010.2f。但是又指定了10位的宽度，则要前补0.
-     2.  F-STRING 格式化
-         1.  `printf(f'{person}上课{3-2}小时')`## 注意要在 字符串模板前面加上 **f**，然后占位符使用{},里边直接放入对应的数据对象。
-         2.  指定宽度：{a:10}即可。例如：`print(f'指定宽度：{a:1}')`
-         3.  左对齐：{a:**<**10},**小于号**。
-         4.  {s:<8.2f}：浮点数，左对齐，宽度为8，小数保留两位，不足则右边补空格。
-         5.  {s:<08.2f}：不足右边补0.
-         6.  {s:08.2f}:不足左边补0，因为此时没有左对齐了。
-     
-31. 循环：while 和 for
+40. 格式化字符串：把一串 字符串模板 的 变量值 传进去
+
+    1.  printf格式化字符串：%s，这种占位符方式。`printf('%s,%s,%s' %(x,y,z))`
+        1.  如果占位符是1个，后面的元组里边一定别忘了**加逗号**.`printf('%s' %(x,))`.。因为%()是一个元组。
+        2.  %d：格式化整数，打印数字，指定宽度，不足宽度补0，而不是补空格，则 `%010d`,从左开始，第一个0代表补0，10表示指定的宽度。
+        3.  %f：格式化小数，%010f，表示整数小数部分宽度为10，若不足，则后补0.
+            1.  如果想保留小数点后面2位数字，可以加上 **.2** 这样：%010.2f。但是又指定了10位的宽度，则要前补0.
+    2.  F-STRING 格式化
+        1.  `printf(f'{person}上课{3-2}小时')`## 注意要在 字符串模板前面加上 **f**，然后占位符使用{},里边直接放入对应的数据对象。
+        2.  指定宽度：{a:10}即可。例如：`print(f'指定宽度：{a:1}')`
+        3.  左对齐：{a:**<**10},**小于号**。
+        4.  {s:<8.2f}：浮点数，左对齐，宽度为8，小数保留两位，不足则右边补空格。
+        5.  {s:<08.2f}：不足右边补0.
+        6.  {s:08.2f}:不足左边补0，因为此时没有左对齐了。
+
+41. 循环：while 和 for
 
     1. ```python
        command = input('请输入命令：')
@@ -210,208 +309,208 @@
                 for men2 in list2:
                     printf(f'{mem1} 大战 {mem2}')
             ```
-    
-32.  字符串编码
 
-     ```python
-     print('你好'.encode('utf8')) # 输出 b'\xe4\xbd......'
-     # 此时 输出对象是 bytes对象
-     # 输出内容以 b 开头，表明是一个字节串bytes对象
-     # \x 说明是用16进制表示一个字节。
-     # 你好 两个字 编码后为 e4bda0 e5a5bd
-     ```
+42. 字符串编码
 
-33.  文件操作
+    ```python
+    print('你好'.encode('utf8')) # 输出 b'\xe4\xbd......'
+    # 此时 输出对象是 bytes对象
+    # 输出内容以 b 开头，表明是一个字节串bytes对象
+    # \x 说明是用16进制表示一个字节。
+    # 你好 两个字 编码后为 e4bda0 e5a5bd
+    ```
 
-     1. 首先通过**内置函数open** 打开文件,获得**文件对象**。
-     
-        file 指定要打开文件的路径
-     
-        ​	相对路径和绝对路径
-     
-        mode 文件打开的 模式 r ，w ，a（追加文本模式）
-     
-        encoding 字符编解码
-     
-     2.  ```python
-         f = open('tmp.txt', 'w', encoding='utf8')
-         f.write('...')
-         f.close()
-         ```
-     
-          w 覆盖！
-     
-     3.  ```python
-         f = open('tmp.txt','r',encoding='gbk')
-         content = f.read() ## 把文件内容读到 字符串中
-         f.close()
-         
-         name = content.split(',')[0] # 切割获取
-         
-         print(name)
-         ```
-     
-     4.  ```python
-         ## 文件指针的概念
-         ## hello\n asdfasdfasdf
-         f = open('tmp.txt')
-         
-         tmp = f.read(3)
-         print(tmp) ## hel
-         
-         tmp = f.read(3)
-         print(tmp)## lo\n   换行符注意
-         
-         tmp = f.read()
-         print(tmp)## 剩下的
-         ```
-     
-     5.  逐行读取分析
-     
-         ```python
-         f = open('tmp.txt')
-         lineList = f.readlines()## readlines逐行输出
-         f.close()
-         
-         for line in lineList:
-             print(line) ## 注意输出后 print也会多加一个换行符
-         ```
-     
-     6.  ```python
-         f = open('tmp.txt')
-         content = f.read()
-         f.close()
-         
-         ## 将文件内容字符串 按换行符 切割 到列表中，每个元素依次对应一行
-         lineList = f.splitlines()## readlines逐行输出
-         for line in lineList:
-             print(line)
-         ```
-     
-     7.  **二进制模式打开**
-     
-         ​	文本，视频，图片，word，excel
-     
-         ​	
-     
-         ```python
-         # mode 参数指定为 rb，就是以二进制读的方式打开文件
-         f = open('tmp.txt','rb')# rb,wb,.如果是wb，则写要写 二进制的字节串
-         content = f.read()
-         f.close()
-         
-         # 由于 二进制文件打开， 所以得到的content 是 字节串对象 bytes
-         print(content)
-         
-         # 解码后，以字符串形式存放
-         print(content.decode('utf8'))
-         
-         # 这还是字节串的长度！
-         print(len(content)) ## 字节串和字符串的区别！！
-         
-         ```
-         
-         ```python
-         # mode 参数指定为 wb，就是以二进制 写 的方式打开文件
-         f = open('tmp.txt','wb')
-         
-         content = '啊我呃'
-         
-         # 二进制打开的文件，必须写入的参数 是bytes类型
-         # 字符串对象需要调用encode进行相应的编码为bytes类型
-         f.write(content.encode('utf8'))
-         
-         f.close()
-         
-         
-         ## 直接表示字节串内容并写入
-         content = b'\xe7\x99'
-         f.write(content)
-         ```
-         
-         ```python
-         # 实现文件拷贝功能
-         def fileCopy(SrcPath,destPath):
+43. 文件操作
+
+    1. 首先通过**内置函数open** 打开文件,获得**文件对象**。
+
+       file 指定要打开文件的路径
+
+       ​	相对路径和绝对路径
+
+       mode 文件打开的 模式 r ，w ，a（追加文本模式）
+
+       encoding 字符编解码
+
+    2.  ```python
+        f = open('tmp.txt', 'w', encoding='utf8')
+        f.write('...')
+        f.close()
+        ```
+
+         w 覆盖！
+
+    3.  ```python
+        f = open('tmp.txt','r',encoding='gbk')
+        content = f.read() ## 把文件内容读到 字符串中
+        f.close()
+        
+        name = content.split(',')[0] # 切割获取
+        
+        print(name)
+        ```
+
+    4.  ```python
+        ## 文件指针的概念
+        ## hello\n asdfasdfasdf
+        f = open('tmp.txt')
+        
+        tmp = f.read(3)
+        print(tmp) ## hel
+        
+        tmp = f.read(3)
+        print(tmp)## lo\n   换行符注意
+        
+        tmp = f.read()
+        print(tmp)## 剩下的
+        ```
+
+    5.  逐行读取分析
+
+        ```python
+        f = open('tmp.txt')
+        lineList = f.readlines()## readlines逐行输出
+        f.close()
+        
+        for line in lineList:
+            print(line) ## 注意输出后 print也会多加一个换行符
+        ```
+
+    6.  ```python
+        f = open('tmp.txt')
+        content = f.read()
+        f.close()
+        
+        ## 将文件内容字符串 按换行符 切割 到列表中，每个元素依次对应一行
+        lineList = f.splitlines()## readlines逐行输出
+        for line in lineList:
+            print(line)
+        ```
+
+    7.  **二进制模式打开**
+
+        ​	文本，视频，图片，word，excel
+
+        ​	
+
+        ```python
+        # mode 参数指定为 rb，就是以二进制读的方式打开文件
+        f = open('tmp.txt','rb')# rb,wb,.如果是wb，则写要写 二进制的字节串
+        content = f.read()
+        f.close()
+        
+        # 由于 二进制文件打开， 所以得到的content 是 字节串对象 bytes
+        print(content)
+        
+        # 解码后，以字符串形式存放
+        print(content.decode('utf8'))
+        
+        # 这还是字节串的长度！
+        print(len(content)) ## 字节串和字符串的区别！！
+        
+        ```
+        
+        ```python
+        # mode 参数指定为 wb，就是以二进制 写 的方式打开文件
+        f = open('tmp.txt','wb')
+        
+        content = '啊我呃'
+        
+        # 二进制打开的文件，必须写入的参数 是bytes类型
+        # 字符串对象需要调用encode进行相应的编码为bytes类型
+        f.write(content.encode('utf8'))
+        
+        f.close()
+        
+        
+        ## 直接表示字节串内容并写入
+        content = b'\xe7\x99'
+        f.write(content)
+        ```
+        
+        ```python
+        # 实现文件拷贝功能
+        def fileCopy(SrcPath,destPath):
+            
+            # 源被拷贝文件 读二进制 打开
+            srcF = open(srcPath,'rb')
+            content = srcF.read()
+            srcF.close()
+            
+            # 目标文件 写二进制打开
+            destF = open(destPath,'wb')
+            destF.write(content)# 写入二进制数据
+            destF.close()
+            
+        fileCopy('1.png','1copy.png')
+        ```
+        
+    8. 模块和库
+
+       1. ```python
+          def saveToFile(memberlist,avgfee):
+              with open('record.txt','a',encoding='utf8') as f:
+                  # 通过 列表推导式，产生  人：费用  这样的列表
+                  recordList = [f'{member}:{avgfee}' for member in memberlist]
+                  f.write('|'.join(recordList) + '\n')
+          ```
+
+          
+
+       2.  `import x`  x这个模块也视为一个对象         x.xx
+
+       3. `from x import xx `                                           xx
+
+       4. `import a,b,c`
+
+       5. `from aa import f1,f2,v1,v2`  **变量也可以导入**
+
+       6. `from aa import *`
+
+       7. `from save import saveToFile`
+
+          `from save2 import saveToFile as saveToFile2`
+
+          
+
+       8. 把模块放入包中
+
+          1. // 包目录需要有一个名字为 `__init__.py`,有了它，python才认为这是一个包
+
+             ```python
+             stock/
+             	__init__.py
+                 a/
+                 	__init__.py
+                    	....
+                 b/
+                 	__init__.py
+                     ....
+                 ....
+             ```
+
+          2. 内置库
+
+          3. ```python
+             import datetime
              
-             # 源被拷贝文件 读二进制 打开
-             srcF = open(srcPath,'rb')
-             content = srcF.read()
-             srcF.close()
+             datetime.date.today().strftime("%Y%m%d")
              
-             # 目标文件 写二进制打开
-             destF = open(destPath,'wb')
-             destF.write(content)# 写入二进制数据
-             destF.close()
-             
-         fileCopy('1.png','1copy.png')
-         ```
-         
-     8. 模块和库
-     
-        1. ```python
-           def saveToFile(memberlist,avgfee):
-               with open('record.txt','a',encoding='utf8') as f:
-                   # 通过 列表推导式，产生  人：费用  这样的列表
-                   recordList = [f'{member}:{avgfee}' for member in memberlist]
-                   f.write('|'.join(recordList) + '\n')
-           ```
-     
-           
-     
-        2.  `import x`  x这个模块也视为一个对象         x.xx
-     
-        3. `from x import xx `                                           xx
-     
-        4. `import a,b,c`
-     
-        5. `from aa import f1,f2,v1,v2`  **变量也可以导入**
-     
-        6. `from aa import *`
-     
-        7. `from save import saveToFile`
-     
-           `from save2 import saveToFile as saveToFile2`
-     
-           
-     
-        8. 把模块放入包中
-     
-           1. // 包目录需要有一个名字为 `__init__.py`,有了它，python才认为这是一个包
-     
-              ```python
-              stock/
-              	__init__.py
-                  a/
-                  	__init__.py
-                     	....
-                  b/
-                  	__init__.py
-                      ....
-                  ....
-              ```
-     
-           2. 内置库
-     
-           3. ```python
-              import datetime
-              
-              datetime.date.today().strftime("%Y%m%d")
-              
-              datetime.date.now().strftime("%Y%m%d %H:%M:%S")
-              ```
-     
-           4. 解释器怎么寻找模块文件？
-     
-              1. 首先在内置模块里找
-              2. 环境变量PYTHONPATH中的都会在解释器启动后，放到sys.path里。，从而作为模块搜索路径。
-              3. 启动脚本 文件所在目录
-                 1. 比如 `python f.py` 那么这个 f.py 就是 启动脚本文件，它所在的目录会被加到 sys.path中作为模块搜索路径
-                 2.  
-           
-     
-34. IDE
+             datetime.date.now().strftime("%Y%m%d %H:%M:%S")
+             ```
 
-35. 字典
+          4. 解释器怎么寻找模块文件？
+
+             1. 首先在内置模块里找
+             2. 环境变量PYTHONPATH中的都会在解释器启动后，放到sys.path里。，从而作为模块搜索路径。
+             3. 启动脚本 文件所在目录
+                1. 比如 `python f.py` 那么这个 f.py 就是 启动脚本文件，它所在的目录会被加到 sys.path中作为模块搜索路径
+                2.  
+          
+
+44. IDE
+
+45. 字典
 
     1. key-value
 
@@ -493,7 +592,7 @@
 
     15. 得到字典中元素的个数：`len(mem)`
 
-36. ```python
+46. ```python
     type(12) ## 整数
     type('12') ## 字符
     type([1,2]) ## 列表
@@ -501,94 +600,94 @@
     type({1:2}) ## 字典
     ```
 
-37.  自定义类
+47. 自定义类
 
-     1.  ```python
-         def pressHorn():
-         	print('Dudud...')
-         
-         benzCar = {
-         	'brand' : '',
-         	'country' : '',
-         	'price' : '',
-         	'pressHorn' : pressHorn #字典对象的值可以是一个函数对象
-         }
-         # 这样执行
-         benzCar['pressHorn']()
-         
-         # 以上太过麻烦
-         ```
+    1.  ```python
+        def pressHorn():
+        	print('Dudud...')
+        
+        benzCar = {
+        	'brand' : '',
+        	'country' : '',
+        	'price' : '',
+        	'pressHorn' : pressHorn #字典对象的值可以是一个函数对象
+        }
+        # 这样执行
+        benzCar['pressHorn']()
+        
+        # 以上太过麻烦
+        ```
 
-     2.  ```python
-         class BenzCar:
-             brand = ''
-             country = ''
-             
-             @staticmethod
-             def pressHorn():
-                 print('dududud...')
-                 
-             def __init__(self): ## 创建实例属性 是和具体的实例相关的。self这个参数，指的也是实例对象。
-                 self.color = 'red'
-                 self.engineSN = '123213'
-                 
-         car1 = BenzCar()
-         print(car1.color)## 实例访问实例属性
-         print(BenzCar.color)## 类访问实例属性，~错误~
-         
-         -----------------------------------------------------------------
-         
-             def __init__(self,color,sen):
-                 self.color = color
-                 self.engineSN = esn
-                 
-         car1 = BenzCar('green','sdfasfd')## 实际传参是 self不需要写，解释器会自动传
-         car2 = BenzCar('blue','asdf')
-         
-         
-         #实例调用方法。定义的实例的方法。那么对实例处理必须参数存在 self。否则，就跟实例没关系，应该定义为 静态方法
-         
-         # 类的静态方法 是不能访问 实例属性的！！！
-         ```
+    2.  ```python
+        class BenzCar:
+            brand = ''
+            country = ''
+            
+            @staticmethod
+            def pressHorn():
+                print('dududud...')
+                
+            def __init__(self): ## 创建实例属性 是和具体的实例相关的。self这个参数，指的也是实例对象。
+                self.color = 'red'
+                self.engineSN = '123213'
+                
+        car1 = BenzCar()
+        print(car1.color)## 实例访问实例属性
+        print(BenzCar.color)## 类访问实例属性，~错误~
+        
+        -----------------------------------------------------------------
+        
+            def __init__(self,color,sen):
+                self.color = color
+                self.engineSN = esn
+                
+        car1 = BenzCar('green','sdfasfd')## 实际传参是 self不需要写，解释器会自动传
+        car2 = BenzCar('blue','asdf')
+        
+        
+        #实例调用方法。定义的实例的方法。那么对实例处理必须参数存在 self。否则，就跟实例没关系，应该定义为 静态方法
+        
+        # 类的静态方法 是不能访问 实例属性的！！！
+        ```
 
-     3.  类之间的关系
+    3.  类之间的关系
 
-         1.  子类会自动拥有父类的一切属性和方法
+        1.  子类会自动拥有父类的一切属性和方法
 
-         2.  ```python
-             	class Benz2016(BenzCar):# 自动拥有父类的属性。。。并新增新的属性
-                     price = 
-                     model = ''
-                     
-                     
-                 class Benz2018(BenzCar):# 完全一致与父类
-                     pass
-             ```
+        2.  ```python
+            	class Benz2016(BenzCar):# 自动拥有父类的属性。。。并新增新的属性
+                    price = 
+                    model = ''
+                    
+                    
+                class Benz2018(BenzCar):# 完全一致与父类
+                    pass
+            ```
 
-         3.  ```python
-             class Benz2018(BenzCar):
-                 price = 1
-                 mode = 'Benz2018'
-                 
-                 def __init__(self,color,engineSN,weight):
-                     #先调用父类的初始化方法
-                     BenzCar.__init__(self,color,engineSN)
-                     self.weight = weight
-                     self.oilweight = 0
-                     
-                 #加油
-                 def fillOil(self,oilAdded):
-                     self.oilweight += oilAdded
-                     self.weight += oilAdded
-             ```
+        3.  ```python
+            class Benz2018(BenzCar):
+                price = 1
+                mode = 'Benz2018'
+                
+                def __init__(self,color,engineSN,weight):
+                    #先调用父类的初始化方法
+                    BenzCar.__init__(self,color,engineSN)
+                    self.weight = weight
+                    self.oilweight = 0
+                    
+                #加油
+                def fillOil(self,oilAdded):
+                    self.oilweight += oilAdded
+                    self.weight += oilAdded
+            ```
 
-         4.  需要注意的是 子类的初始方法里面，需要调用父类的初始化方法！！，否则解释器不会自己执行父类的初始化方法。
-         
-         5.   `父类.__init__(self,...)    ==    super().__init__(...)`，用super()不用在参数里加self了
-         
-     4.  类的组合关系
-     
-38. 异常
+        4.  需要注意的是 子类的初始方法里面，需要调用父类的初始化方法！！，否则解释器不会自己执行父类的初始化方法。
+        
+        5.   `父类.__init__(self,...)    ==    super().__init__(...)`，用super()不用在参数里加self了
+        
+    4.  类的组合关系
+
+48. 异常
 
     1. 定义异常对象
 
@@ -627,7 +726,7 @@
               print(traceback.format_exc())## 打印错误代码行数 必须import traceback
           ```
 
-39. 多线程
+49. 多线程
 
     1. ```python
        print('主线程')
@@ -705,58 +804,58 @@
         print(f'最后为{bant["tec"]}')
         ```
 
-40.  装饰器
+50. 装饰器
 
-     1.  ```python
-         import time
-         
-         #定义一个装饰器
-         def sayLocal(func):# 函数对象作为参数!!!
-             def wrapper():
-                 curTime = func()
-                 return f'当地时间：{curTime}'
-             return wrapper
-         
-         
-         
-         def getXXXTime():
-             return time.strftime()
-         
-         #装饰 getXXXTime
-         getXXXTime = sayLocal(getXXXTime)
-         
-         print(getXXXTime())
-         
-         ---------------------------------------------------------
-         import time
-         
-         #定义一个装饰器
-         def sayLocal(func):# 函数对象作为参数!!!
-             def wrapper():
-                 curTime = func()
-                 return f'当地时间：{curTime}'
-             return wrapper
-         
-         
-         @sayLocal            #语法糖 等价于 getXXXTime = sayLocal(getXXXTime)
-         def getXXXTime():
-             return time.strftime()
-         
-         
-         print(getXXXTime())
-         
-         ```
+    1.  ```python
+        import time
+        
+        #定义一个装饰器
+        def sayLocal(func):# 函数对象作为参数!!!
+            def wrapper():
+                curTime = func()
+                return f'当地时间：{curTime}'
+            return wrapper
+        
+        
+        
+        def getXXXTime():
+            return time.strftime()
+        
+        #装饰 getXXXTime
+        getXXXTime = sayLocal(getXXXTime)
+        
+        print(getXXXTime())
+        
+        ---------------------------------------------------------
+        import time
+        
+        #定义一个装饰器
+        def sayLocal(func):# 函数对象作为参数!!!
+            def wrapper():
+                curTime = func()
+                return f'当地时间：{curTime}'
+            return wrapper
+        
+        
+        @sayLocal            #语法糖 等价于 getXXXTime = sayLocal(getXXXTime)
+        def getXXXTime():
+            return time.strftime()
+        
+        
+        print(getXXXTime())
+        
+        ```
 
-41.  JSON序列化
+51. JSON序列化
 
-     1.  JSON是个字符串
-     2.  列表中镶嵌字典(数据对象)→字符串
-     3.  定义：把 程序的各种类型数据对象 变成 表示该数据对象的 **字节串** 这个过程 称之为 **序列化**
-     4.  而把 字节串转化为 程序中的数据对象 这个过程 称之为 **反序列化**
-     5.  序列化：`jsonStr = json.dumps(historyTransactions,ensure_ascii=False,indent=4)`
-     6.  反序列化：`obj = json.loads(jsonStr)`
-     
-42. socket
+    1.  JSON是个字符串
+    2.  列表中镶嵌字典(数据对象)→字符串
+    3.  定义：把 程序的各种类型数据对象 变成 表示该数据对象的 **字节串** 这个过程 称之为 **序列化**
+    4.  而把 字节串转化为 程序中的数据对象 这个过程 称之为 **反序列化**
+    5.  序列化：`jsonStr = json.dumps(historyTransactions,ensure_ascii=False,indent=4)`
+    6.  反序列化：`obj = json.loads(jsonStr)`
+
+52. socket
 
     1. ```python
        # tcp server 服务端
@@ -848,68 +947,68 @@
         
         ```
 
-43.  日期与时间
+53. 日期与时间
 
-     1.  `time.time()`
+    1.  `time.time()`
 
-     2.  ```python
-         from datetime import datetime
-         str(datetime.now())
-         
-         #具体的分割，‘-’可以替换为‘_’或其他 中间的 ** 也可以替换
-         datetime.now().strftime('%Y-%m-%d ** %H:%M:%S')
-         
-         
-         time.strftime('%Y%m%d %H:%M:%S',time.localtime(秒数))#epoch秒数
-         ```
+    2.  ```python
+        from datetime import datetime
+        str(datetime.now())
+        
+        #具体的分割，‘-’可以替换为‘_’或其他 中间的 ** 也可以替换
+        datetime.now().strftime('%Y-%m-%d ** %H:%M:%S')
+        
+        
+        time.strftime('%Y%m%d %H:%M:%S',time.localtime(秒数))#epoch秒数
+        ```
 
-44.  文件和目录
+54. 文件和目录
 
-     1.  ```python
-         # 递归创建目录 makedirs
-         import os
-         os.makedis('/temp/py/tec',exist_ok=True)
-         #如果没有 exist_ok=True 这句话，重复执行，会报错
-         ```
+    1.  ```python
+        # 递归创建目录 makedirs
+        import os
+        os.makedis('/temp/py/tec',exist_ok=True)
+        #如果没有 exist_ok=True 这句话，重复执行，会报错
+        ```
 
-     2.  递归遍历目录下所有文件
+    2.  递归遍历目录下所有文件
 
-         ```python
-         import os
-         
-         # 目标目录
-         targetDir = r'd:\tmp\util\dist\check'
-         files = []
-         dirs  = []
-         
-         # 下面的三个变量 dirpath, dirnames, filenames
-         # dirpath 代表当前遍历到的目录名
-         # dirnames 是列表对象，存放当前dirpath中的所有子目录名
-         # filenames 是列表对象，存放当前dirpath中的所有文件名
-         
-         for (dirpath, dirnames, filenames) in os.walk(targetDir):
-             files += filenames
-             dirs += dirnames
-         
-         print(files)
-         print(dirs)
-         ```
+        ```python
+        import os
+        
+        # 目标目录
+        targetDir = r'd:\tmp\util\dist\check'
+        files = []
+        dirs  = []
+        
+        # 下面的三个变量 dirpath, dirnames, filenames
+        # dirpath 代表当前遍历到的目录名
+        # dirnames 是列表对象，存放当前dirpath中的所有子目录名
+        # filenames 是列表对象，存放当前dirpath中的所有文件名
+        
+        for (dirpath, dirnames, filenames) in os.walk(targetDir):
+            files += filenames
+            dirs += dirnames
+        
+        print(files)
+        print(dirs)
+        ```
 
-45.  JSON深度拷贝
+55. JSON深度拷贝
 
-     1.  ```python
-         t1 = [
-             {
-                 
-             },
-             {
-                 
-             }
-         ]
-         
-         import json
-         t2 = json.loads(json.dumps(t1))
-         # 先序列化为字节串再反序列化
-         ```
+    1.  ```python
+        t1 = [
+            {
+                
+            },
+            {
+                
+            }
+        ]
+        
+        import json
+        t2 = json.loads(json.dumps(t1))
+        # 先序列化为字节串再反序列化
+        ```
 
-         
+        
