--- a/1.基础.md
+++ b/1.基础.md
@@ -101,86 +101,131 @@
      Out[160]: {1, 2, 3, 4}
      ```
 
-13.  元组，即tuple，是不可变对象，对象一旦生成，它的值将不能更改；列表是可变对象，对象生成后，可以对其元素进行更改，等操作。
+13. 枚举对象
 
-14.  理解 `__init__` 和 `__call__`:
+    ```python
+    In [1]: s = ["a","b","c"]
+        ...: for i ,v in enumerate(s,1):
+        ...:     print(i,v)
+        ...:
+    1 a
+    2 b
+    3 c
+    ```
 
-     ​		`__init__` 和 `__call__`方法都是用来初始化类的，但他们存在一些区别：
-
-     ​				`__init__` 是用来在初始化类的对象时被调用，同时用来传入一些参数
-
-     ​				`__call__` 是用来调用该对象时被触发。
+14.  迭代器
 
      ```python
-     class A:
-     	def __init__(self):
-     		print "init"
-         
-     	def __call__(self):
-     		print "call"
+     In [1]: class TestIter(object):
+         ...:     def __init__(self):
+         ...:         self.l=[1,3,2,3,4,5]
+         ...:         self.i=iter(self.l)
+         ...:     def __call__(self):  #定义了__call__方法的类的实例是可调用的
+         ...:         item = next(self.i)
+         ...:         print ("__call__ is called,fowhich would return",item)
+         ...:         return item
+         ...:     def __iter__(self): #支持迭代协议(即定义有__iter__()函数)
+         ...:         print ("__iter__ is called!!")
+         ...:         return iter(self.l)
+     In [2]: t = TestIter()
+     In [3]: t() # 因为实现了__call__，所以t实例能被调用
+     __call__ is called,which would return 1
+     Out[3]: 1
      
-     a = A() # 初始化类的对象，输出 init
-     a() # 调用该对象，输出 call
-     
-     -------------------------------------
-     
-     #【实验一】
-     class Callback(object):
-         #构造方法
-         def __init__(self):
-             self.validation_data = 45
-         def set_params(self, params):
-             self.params = params
-     cb = Callback()
-     print(cb.validation_data)   #能得到45
-     #【实验二】
-     class Callback(object):
-         #构造方法
-         def __init__(self, data):
-             self.validation_data = data
-         def set_params(self, params):
-             self.params = params
-     cb = Callback(123)
-     print(cb.validation_data)   #能得到123
-     '''
-     在实验二部分更改为cb=Callback()，则运行会有报错
-     ​	TypeError: __init__() missing 1 required positional argument: 'data'
-     '''
-     
-     #【实验三】
-     class X(object):
-         def __init__(self, a, b, range):
-             self.a = a
-             self.b = b
-             self.range = range
-         def __call__(self, a, b):
-             self.a = a
-             self.b = b
-             print('__call__ with （{}, {}）'.format(self.a, self.b))
-         def __del__(self, a, b, range):
-             del self.a
-             del self.b
-             del self.range
-     #实例化这个类
-     x_instance = X(1, 2, 3)
-     #通过_call_()来修改类属性值
-     x_instance(1,5)
-      
-     得到结果：__call__ with （1, 5）
-     
-     '''
-     总结：
-     	1. __init__()的作用是初始化某个类的一个实例。 
-     	2. __call__()的作用是使实例能够像函数一样被调用，同时不影响实例本身的生命周期（__call__()不影响一个实例的构造和析构）。但是__call__()可以用来改变实例的内部成员的值。
-     	3. _call_方法的存在，让实例可以让类似函数方法那样被直接使用，但是有个前提就是必须这个类是实例化了的，在Python实际使用中必须先实例化对象
-     '''
+     In [4]: for e in TestIter(): # 因为实现了__iter__方法，所以t能被迭代
+         ...:     print(e)
+         ...: 
+     __iter__ is called!!
+     1
+     3
+     2
+     3
+     4
+     5
      ```
 
      
 
-     
+15. 元组，即tuple，是不可变对象，对象一旦生成，它的值将不能更改；列表是可变对象，对象生成后，可以对其元素进行更改，等操作。
 
-15. 操作对象函数
+16. 理解 `__init__` 和 `__call__`:
+
+    ​		`__init__` 和 `__call__`方法都是用来初始化类的，但他们存在一些区别：
+
+    ​				`__init__` 是用来在初始化类的对象时被调用，同时用来传入一些参数
+
+    ​				`__call__` 是用来调用该对象时被触发。
+
+    ```python
+    class A:
+    	def __init__(self):
+    		print "init"
+        
+    	def __call__(self):
+    		print "call"
+    
+    a = A() # 初始化类的对象，输出 init
+    a() # 调用该对象，输出 call
+    
+    -------------------------------------
+    
+    #【实验一】
+    class Callback(object):
+        #构造方法
+        def __init__(self):
+            self.validation_data = 45
+        def set_params(self, params):
+            self.params = params
+    cb = Callback()
+    print(cb.validation_data)   #能得到45
+    #【实验二】
+    class Callback(object):
+        #构造方法
+        def __init__(self, data):
+            self.validation_data = data
+        def set_params(self, params):
+            self.params = params
+    cb = Callback(123)
+    print(cb.validation_data)   #能得到123
+    '''
+    在实验二部分更改为cb=Callback()，则运行会有报错
+    ​	TypeError: __init__() missing 1 required positional argument: 'data'
+    '''
+    
+    #【实验三】
+    class X(object):
+        def __init__(self, a, b, range):
+            self.a = a
+            self.b = b
+            self.range = range
+        def __call__(self, a, b):
+            self.a = a
+            self.b = b
+            print('__call__ with （{}, {}）'.format(self.a, self.b))
+        def __del__(self, a, b, range):
+            del self.a
+            del self.b
+            del self.range
+    #实例化这个类
+    x_instance = X(1, 2, 3)
+    #通过_call_()来修改类属性值
+    x_instance(1,5)
+     
+    得到结果：__call__ with （1, 5）
+    
+    '''
+    总结：
+    	1. __init__()的作用是初始化某个类的一个实例。 
+    	2. __call__()的作用是使实例能够像函数一样被调用，同时不影响实例本身的生命周期（__call__()不影响一个实例的构造和析构）。但是__call__()可以用来改变实例的内部成员的值。
+    	3. _call_方法的存在，让实例可以让类似函数方法那样被直接使用，但是有个前提就是必须这个类是实例化了的，在Python实际使用中必须先实例化对象
+    '''
+    ```
+
+    
+
+    
+
+17. 操作对象函数
 
     ```python
     In [31]: def f():
@@ -196,60 +241,60 @@
     # 创建函数对象的list，根据想要调用的index，方便统一调用。
     ```
 
-16. 逆序序列
+18. 逆序序列
 
     ```python
     list(range(10,-1,-1)) # [10, 9, 8, 7, 6, 5, 4, 3, 2, 1, 0]
     # 第三个参数为负时，表示从第一个参数开始递减，终止到第二个参数(不包括此边界)
     ```
 
-17. 
+19. 
 
-18. 变量赋值不改变 原本左边指向的右边 的值，而是将左边指向新的内存对象。
+20. 变量赋值不改变 原本左边指向的右边 的值，而是将左边指向新的内存对象。
 
-19. 三引号字符串 支持跨行
+21. 三引号字符串 支持跨行
 
-20. 字符串里有引号：用三引号
+22. 字符串里有引号：用三引号
 
-21. 字符串元素的索引从0开始，负数反过来表示索引
+23. 字符串元素的索引从0开始，负数反过来表示索引
 
-22. 字符串 切片的位置！（从左向右，从**0**开始。从右向左，最右**-1**。以左方为索引位置）左闭右开
+24. 字符串 切片的位置！（从左向右，从**0**开始。从右向左，最右**-1**。以左方为索引位置）左闭右开
 
-23. py的函数定义， 注意缩进。
+25. py的函数定义， 注意缩进。
 
-24. 函数必须先定义，再调用，上下关系。
+26. 函数必须先定义，再调用，上下关系。
 
-25. 函数的返回，`return ‘’`。引号里代表这个函数的返回，获取后输出。
+27. 函数的返回，`return ‘’`。引号里代表这个函数的返回，获取后输出。
 
-26. 在定义函数时，赋缺省值，即default
+28. 在定义函数时，赋缺省值，即default
 
-27. 列表里边可存函数，可存列表 `nameList = [1,2,3，['hello'], [7,8,9] ]`
+29. 列表里边可存函数，可存列表 `nameList = [1,2,3，['hello'], [7,8,9] ]`
 
-28. 列表的sequence操作，即索引切片
+30. 列表的sequence操作，即索引切片
 
-29. 列表特性-存储内容的改变。直接`a[i]=xxx,a[i][j]=xxx`
+31. 列表特性-存储内容的改变。直接`a[i]=xxx,a[i][j]=xxx`
 
-30. 元组（Tuple）：和列表不同的是，它的内容是无法改变的。`nameList=（）`，圆括号用来表示一个元组。`a = （1,2,3.14，‘hello’，[7,8,9]）`如果元组中只有一个元素，也要加逗号，即`a = (1,)`,否则对于`a = （1）`会被视为是数字1.
+32. 元组（Tuple）：和列表不同的是，它的内容是无法改变的。`nameList=（）`，圆括号用来表示一个元组。`a = （1,2,3.14，‘hello’，[7,8,9]）`如果元组中只有一个元素，也要加逗号，即`a = (1,)`,否则对于`a = （1）`会被视为是数字1.
 
-31. (**sequence** 下)判断 元素 是否存在于列表或元组里 用 `in`，返回`false`或`true`
+33. (**sequence** 下)判断 元素 是否存在于列表或元组里 用 `in`，返回`false`或`true`
 
-32. 多个变量同时赋值：`x,y = (1,2)`  ,x 的值为1，y 的值为2
+34. 多个变量同时赋值：`x,y = (1,2)`  ,x 的值为1，y 的值为2
 
-33. 列表同时赋值：`name,age = ['李逵',33]` ,name 的值为 '李逵'，age的值为 33
+35. 列表同时赋值：`name,age = ['李逵',33]` ,name 的值为 '李逵'，age的值为 33
 
-34. 不对的例子：`x,y = (1,2,3)    a,b = [1]`
+36. 不对的例子：`x,y = (1,2,3)    a,b = [1]`
 
-35. 且 的条件组合：**and**
+37. 且 的条件组合：**and**
 
-36. 或 的条件组合：**or**
+38. 或 的条件组合：**or**
 
-37. 如果 and  和 or  一起使用，则**先计算 and**，其结果在和 or 一起计算。
+39. 如果 and  和 or  一起使用，则**先计算 and**，其结果在和 or 一起计算。
 
-38. **not**  翻转表达式。
+40. **not**  翻转表达式。
 
-39. 如果 and  or not 一起计算，则 先计算 **not**，再计算 **and**，最后是 **or**。比如：`not 4 > 6 or 'sk' == 'ok' and 4 > 3`.则先计算 **not 4 > 6** ，得到 **true**，再计算 **'sk' == 'ok' and 4 > 3**，得到 **false**。最后计算 **or**， 就是 **true or false** 。最后结果是 **true**。
+41. 如果 and  or not 一起计算，则 先计算 **not**，再计算 **and**，最后是 **or**。比如：`not 4 > 6 or 'sk' == 'ok' and 4 > 3`.则先计算 **not 4 > 6** ，得到 **true**，再计算 **'sk' == 'ok' and 4 > 3**，得到 **false**。最后计算 **or**， 就是 **true or false** 。最后结果是 **true**。
 
-40. ```python
+42. ```python
     def regis(): # 注意定义函数后的 冒号
         phont = input('请输入手机号（不超过11位）：')
         if len(phone) > 11: # 注意if语句后的 冒号
@@ -264,9 +309,9 @@
     regis()
     ```
 
-41. 字面量（直接写出来的） 和 变量
+43. 字面量（直接写出来的） 和 变量
 
-42. 字符串
+44. 字符串
 
     1.  字符串.count('xx')
 
@@ -300,7 +345,7 @@
 
     10.  startswith和endswith：检查开头或结尾是否包含某字符串并返回true或false。
 
-43. 列表对象
+45. 列表对象
 
     1.  append：改变列表内容，在**后面**加一个元素
     2.  insert:在指定位置（索引）处添加。
@@ -308,7 +353,7 @@
     4.  remove：删除。pop是删除元素的**索引**，remove是删除元素的**值**。remove从第一个元素开始，寻找 和参数对象 相同的元素，如果找到了就删除。找到后，不会继续往后找其他相等的元素。也就是说remove最多只会删除一个元素。
     5.  reverse：倒置，将列表中元素倒过来。
 
-44. 格式化字符串：把一串 字符串模板 的 变量值 传进去
+46. 格式化字符串：把一串 字符串模板 的 变量值 传进去
 
     1.  printf格式化字符串：%s，这种占位符方式。`printf('%s,%s,%s' %(x,y,z))`
         1.  如果占位符是1个，后面的元组里边一定别忘了**加逗号**.`printf('%s' %(x,))`.。因为%()是一个元组。
@@ -323,7 +368,7 @@
         5.  {s:<08.2f}：不足右边补0.
         6.  {s:08.2f}:不足左边补0，因为此时没有左对齐了。
 
-45. 循环：while 和 for
+47. 循环：while 和 for
 
     1. ```python
        command = input('请输入命令：')
@@ -410,7 +455,7 @@
                     printf(f'{mem1} 大战 {mem2}')
             ```
 
-46. 字符串编码
+48. 字符串编码
 
     ```python
     print('你好'.encode('utf8')) # 输出 b'\xe4\xbd......'
@@ -420,7 +465,7 @@
     # 你好 两个字 编码后为 e4bda0 e5a5bd
     ```
 
-47. 文件操作
+49. 文件操作
 
     1. 首先通过**内置函数open** 打开文件,获得**文件对象**。
 
@@ -608,9 +653,9 @@
                 2.  
           
 
-48. IDE
+50. IDE
 
-49. 字典
+51. 字典
 
     1. key-value
 
@@ -692,7 +737,7 @@
 
     15. 得到字典中元素的个数：`len(mem)`
 
-50. ```python
+52. ```python
     type(12) ## 整数
     type('12') ## 字符
     type([1,2]) ## 列表
@@ -700,7 +745,7 @@
     type({1:2}) ## 字典
     ```
 
-51. 自定义类
+53. 自定义类
 
     1.  ```python
         def pressHorn():
@@ -787,7 +832,7 @@
         
     4.  类的组合关系
 
-52. 异常
+54. 异常
 
     1. 定义异常对象
 
@@ -826,7 +871,7 @@
               print(traceback.format_exc())## 打印错误代码行数 必须import traceback
           ```
 
-53. 多线程
+55. 多线程
 
     1. ```python
        print('主线程')
@@ -904,7 +949,7 @@
         print(f'最后为{bant["tec"]}')
         ```
 
-54. 装饰器
+56. 装饰器
 
     1.  ```python
         import time
@@ -942,7 +987,7 @@
         # https://www.zhihu.com/question/26930016
         ```
 
-55. JSON序列化
+57. JSON序列化
 
     1.  JSON是个字符串
     2.  列表中镶嵌字典(数据对象)→字符串
@@ -951,7 +996,7 @@
     5.  序列化：`jsonStr = json.dumps(historyTransactions,ensure_ascii=False,indent=4)`
     6.  反序列化：`obj = json.loads(jsonStr)`
 
-56. socket
+58. socket
 
     1. ```python
        # tcp server 服务端
@@ -1043,7 +1088,7 @@
         
         ```
 
-57. 日期与时间
+59. 日期与时间
 
     1.  `time.time()`
 
@@ -1058,7 +1103,7 @@
         time.strftime('%Y%m%d %H:%M:%S',time.localtime(秒数))#epoch秒数
         ```
 
-58. 文件和目录
+60. 文件和目录
 
     1.  ```python
         # 递归创建目录 makedirs
@@ -1090,7 +1135,7 @@
         print(dirs)
         ```
 
-59. JSON深度拷贝
+61. JSON深度拷贝
 
     1.  ```python
         t1 = [
